# imkproj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: imklib
src/: main.c
